syntax = "proto3";

package mycelium_grpc;

import "google/protobuf/timestamp.proto";

// Unique identifier for a peer
message PeerId {
  string id = 1;
}

// Unique identifier for a post
message PostId {
  string id = 1;
}

// Core Post data structure
message Post {
  PostId post_id = 1;
  optional PostId parent_post_id = 2;     // Optional reference to a parent post (for reply/quote)
  string content = 3;                     // Post body text
  PeerId author = 4;                      // Original author of the post
  google.protobuf.Timestamp created_at = 5;
}
